--- a/HAZI/HAZI05/TEST.ipynb
+++ b/HAZI/HAZI05/TEST.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -142,8 +142,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 12\u001b[0m\n\u001b[0;32m      4\u001b[0m knn\u001b[39m.\u001b[39mtrain_test_split(x, y)\n\u001b[0;32m      6\u001b[0m \u001b[39m'''def euclidean(x_train, element_of_x: pd.DataFrame) -> pd.DataFrame:\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[39m        temp = x_train - element_of_x\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[39m        return np.sqrt(((x_train.values - element_of_x.values)**2).sum(axis=1))\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \n\u001b[0;32m     10\u001b[0m \u001b[39meuclidean(knn.x_train, knn.x_test.iloc[0, :])'''\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m knn\u001b[39m.\u001b[39;49mpredict(knn\u001b[39m.\u001b[39;49mx_test)\n",
-      "Cell \u001b[1;32mIn[4], line 66\u001b[0m, in \u001b[0;36mKNNClassifier.predict\u001b[1;34m(self, x_test)\u001b[0m\n\u001b[0;32m     62\u001b[0m     distances \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39meuclidean(x_test\u001b[39m.\u001b[39miloc[[idx]])\n\u001b[0;32m     64\u001b[0m     distances \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(\u001b[39msorted\u001b[39m(\u001b[39mzip\u001b[39m(distances, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39my_train)))\n\u001b[1;32m---> 66\u001b[0m     label_pred \u001b[39m=\u001b[39m distances\u001b[39m.\u001b[39;49mmode()[:\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mk, \u001b[39m1\u001b[39;49m]\n\u001b[0;32m     68\u001b[0m     labels_pred\u001b[39m.\u001b[39mappend(label_pred)\n\u001b[0;32m     70\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39my_preds \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(labels_pred)\n",
+      "Cell \u001b[1;32mIn[3], line 12\u001b[0m\n\u001b[0;32m      4\u001b[0m knn\u001b[39m.\u001b[39mtrain_test_split(x, y)\n\u001b[0;32m      6\u001b[0m \u001b[39m'''def euclidean(x_train, element_of_x: pd.DataFrame) -> pd.DataFrame:\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[39m        temp = x_train - element_of_x\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[39m        return np.sqrt(((x_train.values - element_of_x.values)**2).sum(axis=1))\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \n\u001b[0;32m     10\u001b[0m \u001b[39meuclidean(knn.x_train, knn.x_test.iloc[0, :])'''\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m knn\u001b[39m.\u001b[39;49mpredict(knn\u001b[39m.\u001b[39;49mx_test)\n",
+      "Cell \u001b[1;32mIn[2], line 66\u001b[0m, in \u001b[0;36mKNNClassifier.predict\u001b[1;34m(self, x_test)\u001b[0m\n\u001b[0;32m     62\u001b[0m     distances \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39meuclidean(x_test\u001b[39m.\u001b[39miloc[[idx]])\n\u001b[0;32m     64\u001b[0m     distances \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(\u001b[39msorted\u001b[39m(\u001b[39mzip\u001b[39m(distances, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39my_train)))\n\u001b[1;32m---> 66\u001b[0m     label_pred \u001b[39m=\u001b[39m distances[:\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mk, \u001b[39m1\u001b[39;49m]\u001b[39m.\u001b[39mmode()\n\u001b[0;32m     68\u001b[0m     labels_pred\u001b[39m.\u001b[39mappend(label_pred)\n\u001b[0;32m     70\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39my_preds \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(labels_pred)\n",
       "File \u001b[1;32mc:\\Users\\darab\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\frame.py:3458\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3456\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3457\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3458\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3459\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3460\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
       "File \u001b[1;32mc:\\Users\\darab\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\indexes\\range.py:388\u001b[0m, in \u001b[0;36mRangeIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m    386\u001b[0m         \u001b[39mexcept\u001b[39;00m \u001b[39mValueError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m    387\u001b[0m             \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m--> 388\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key)\n\u001b[0;32m    389\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39mget_loc(key, method\u001b[39m=\u001b[39mmethod, tolerance\u001b[39m=\u001b[39mtolerance)\n",
       "\u001b[1;31mKeyError\u001b[0m: (slice(None, 3, None), 1)"
