--- a/HAZI/HAZI08/HAZI08.ipynb
+++ b/HAZI/HAZI08/HAZI08.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,329 +23,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\darab\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(array([[5.1, 3.5, 1.4],\n",
-       "        [4.9, 3. , 1.4],\n",
-       "        [4.7, 3.2, 1.3],\n",
-       "        [4.6, 3.1, 1.5],\n",
-       "        [5. , 3.6, 1.4],\n",
-       "        [5.4, 3.9, 1.7],\n",
-       "        [4.6, 3.4, 1.4],\n",
-       "        [5. , 3.4, 1.5],\n",
-       "        [4.4, 2.9, 1.4],\n",
-       "        [4.9, 3.1, 1.5],\n",
-       "        [5.4, 3.7, 1.5],\n",
-       "        [4.8, 3.4, 1.6],\n",
-       "        [4.8, 3. , 1.4],\n",
-       "        [4.3, 3. , 1.1],\n",
-       "        [5.8, 4. , 1.2],\n",
-       "        [5.7, 4.4, 1.5],\n",
-       "        [5.4, 3.9, 1.3],\n",
-       "        [5.1, 3.5, 1.4],\n",
-       "        [5.7, 3.8, 1.7],\n",
-       "        [5.1, 3.8, 1.5],\n",
-       "        [5.4, 3.4, 1.7],\n",
-       "        [5.1, 3.7, 1.5],\n",
-       "        [4.6, 3.6, 1. ],\n",
-       "        [5.1, 3.3, 1.7],\n",
-       "        [4.8, 3.4, 1.9],\n",
-       "        [5. , 3. , 1.6],\n",
-       "        [5. , 3.4, 1.6],\n",
-       "        [5.2, 3.5, 1.5],\n",
-       "        [5.2, 3.4, 1.4],\n",
-       "        [4.7, 3.2, 1.6],\n",
-       "        [4.8, 3.1, 1.6],\n",
-       "        [5.4, 3.4, 1.5],\n",
-       "        [5.2, 4.1, 1.5],\n",
-       "        [5.5, 4.2, 1.4],\n",
-       "        [4.9, 3.1, 1.5],\n",
-       "        [5. , 3.2, 1.2],\n",
-       "        [5.5, 3.5, 1.3],\n",
-       "        [4.9, 3.6, 1.4],\n",
-       "        [4.4, 3. , 1.3],\n",
-       "        [5.1, 3.4, 1.5],\n",
-       "        [5. , 3.5, 1.3],\n",
-       "        [4.5, 2.3, 1.3],\n",
-       "        [4.4, 3.2, 1.3],\n",
-       "        [5. , 3.5, 1.6],\n",
-       "        [5.1, 3.8, 1.9],\n",
-       "        [4.8, 3. , 1.4],\n",
-       "        [5.1, 3.8, 1.6],\n",
-       "        [4.6, 3.2, 1.4],\n",
-       "        [5.3, 3.7, 1.5],\n",
-       "        [5. , 3.3, 1.4],\n",
-       "        [7. , 3.2, 4.7],\n",
-       "        [6.4, 3.2, 4.5],\n",
-       "        [6.9, 3.1, 4.9],\n",
-       "        [5.5, 2.3, 4. ],\n",
-       "        [6.5, 2.8, 4.6],\n",
-       "        [5.7, 2.8, 4.5],\n",
-       "        [6.3, 3.3, 4.7],\n",
-       "        [4.9, 2.4, 3.3],\n",
-       "        [6.6, 2.9, 4.6],\n",
-       "        [5.2, 2.7, 3.9],\n",
-       "        [5. , 2. , 3.5],\n",
-       "        [5.9, 3. , 4.2],\n",
-       "        [6. , 2.2, 4. ],\n",
-       "        [6.1, 2.9, 4.7],\n",
-       "        [5.6, 2.9, 3.6],\n",
-       "        [6.7, 3.1, 4.4],\n",
-       "        [5.6, 3. , 4.5],\n",
-       "        [5.8, 2.7, 4.1],\n",
-       "        [6.2, 2.2, 4.5],\n",
-       "        [5.6, 2.5, 3.9],\n",
-       "        [5.9, 3.2, 4.8],\n",
-       "        [6.1, 2.8, 4. ],\n",
-       "        [6.3, 2.5, 4.9],\n",
-       "        [6.1, 2.8, 4.7],\n",
-       "        [6.4, 2.9, 4.3],\n",
-       "        [6.6, 3. , 4.4],\n",
-       "        [6.8, 2.8, 4.8],\n",
-       "        [6.7, 3. , 5. ],\n",
-       "        [6. , 2.9, 4.5],\n",
-       "        [5.7, 2.6, 3.5],\n",
-       "        [5.5, 2.4, 3.8],\n",
-       "        [5.5, 2.4, 3.7],\n",
-       "        [5.8, 2.7, 3.9],\n",
-       "        [6. , 2.7, 5.1],\n",
-       "        [5.4, 3. , 4.5],\n",
-       "        [6. , 3.4, 4.5],\n",
-       "        [6.7, 3.1, 4.7],\n",
-       "        [6.3, 2.3, 4.4],\n",
-       "        [5.6, 3. , 4.1],\n",
-       "        [5.5, 2.5, 4. ],\n",
-       "        [5.5, 2.6, 4.4],\n",
-       "        [6.1, 3. , 4.6],\n",
-       "        [5.8, 2.6, 4. ],\n",
-       "        [5. , 2.3, 3.3],\n",
-       "        [5.6, 2.7, 4.2],\n",
-       "        [5.7, 3. , 4.2],\n",
-       "        [5.7, 2.9, 4.2],\n",
-       "        [6.2, 2.9, 4.3],\n",
-       "        [5.1, 2.5, 3. ],\n",
-       "        [5.7, 2.8, 4.1],\n",
-       "        [6.3, 3.3, 6. ],\n",
-       "        [5.8, 2.7, 5.1],\n",
-       "        [7.1, 3. , 5.9],\n",
-       "        [6.3, 2.9, 5.6],\n",
-       "        [6.5, 3. , 5.8],\n",
-       "        [7.6, 3. , 6.6],\n",
-       "        [4.9, 2.5, 4.5],\n",
-       "        [7.3, 2.9, 6.3],\n",
-       "        [6.7, 2.5, 5.8],\n",
-       "        [7.2, 3.6, 6.1],\n",
-       "        [6.5, 3.2, 5.1],\n",
-       "        [6.4, 2.7, 5.3],\n",
-       "        [6.8, 3. , 5.5],\n",
-       "        [5.7, 2.5, 5. ],\n",
-       "        [5.8, 2.8, 5.1],\n",
-       "        [6.4, 3.2, 5.3],\n",
-       "        [6.5, 3. , 5.5],\n",
-       "        [7.7, 3.8, 6.7],\n",
-       "        [7.7, 2.6, 6.9],\n",
-       "        [6. , 2.2, 5. ],\n",
-       "        [6.9, 3.2, 5.7],\n",
-       "        [5.6, 2.8, 4.9],\n",
-       "        [7.7, 2.8, 6.7],\n",
-       "        [6.3, 2.7, 4.9],\n",
-       "        [6.7, 3.3, 5.7],\n",
-       "        [7.2, 3.2, 6. ],\n",
-       "        [6.2, 2.8, 4.8],\n",
-       "        [6.1, 3. , 4.9],\n",
-       "        [6.4, 2.8, 5.6],\n",
-       "        [7.2, 3. , 5.8],\n",
-       "        [7.4, 2.8, 6.1],\n",
-       "        [7.9, 3.8, 6.4],\n",
-       "        [6.4, 2.8, 5.6],\n",
-       "        [6.3, 2.8, 5.1],\n",
-       "        [6.1, 2.6, 5.6],\n",
-       "        [7.7, 3. , 6.1],\n",
-       "        [6.3, 3.4, 5.6],\n",
-       "        [6.4, 3.1, 5.5],\n",
-       "        [6. , 3. , 4.8],\n",
-       "        [6.9, 3.1, 5.4],\n",
-       "        [6.7, 3.1, 5.6],\n",
-       "        [6.9, 3.1, 5.1],\n",
-       "        [5.8, 2.7, 5.1],\n",
-       "        [6.8, 3.2, 5.9],\n",
-       "        [6.7, 3.3, 5.7],\n",
-       "        [6.7, 3. , 5.2],\n",
-       "        [6.3, 2.5, 5. ],\n",
-       "        [6.5, 3. , 5.2],\n",
-       "        [6.2, 3.4, 5.4],\n",
-       "        [5.9, 3. , 5.1]]),\n",
-       " array([[0.2],\n",
-       "        [0.2],\n",
-       "        [0.2],\n",
-       "        [0.2],\n",
-       "        [0.2],\n",
-       "        [0.4],\n",
-       "        [0.3],\n",
-       "        [0.2],\n",
-       "        [0.2],\n",
-       "        [0.1],\n",
-       "        [0.2],\n",
-       "        [0.2],\n",
-       "        [0.1],\n",
-       "        [0.1],\n",
-       "        [0.2],\n",
-       "        [0.4],\n",
-       "        [0.4],\n",
-       "        [0.3],\n",
-       "        [0.3],\n",
-       "        [0.3],\n",
-       "        [0.2],\n",
-       "        [0.4],\n",
-       "        [0.2],\n",
-       "        [0.5],\n",
-       "        [0.2],\n",
-       "        [0.2],\n",
-       "        [0.4],\n",
-       "        [0.2],\n",
-       "        [0.2],\n",
-       "        [0.2],\n",
-       "        [0.2],\n",
-       "        [0.4],\n",
-       "        [0.1],\n",
-       "        [0.2],\n",
-       "        [0.2],\n",
-       "        [0.2],\n",
-       "        [0.2],\n",
-       "        [0.1],\n",
-       "        [0.2],\n",
-       "        [0.2],\n",
-       "        [0.3],\n",
-       "        [0.3],\n",
-       "        [0.2],\n",
-       "        [0.6],\n",
-       "        [0.4],\n",
-       "        [0.3],\n",
-       "        [0.2],\n",
-       "        [0.2],\n",
-       "        [0.2],\n",
-       "        [0.2],\n",
-       "        [1.4],\n",
-       "        [1.5],\n",
-       "        [1.5],\n",
-       "        [1.3],\n",
-       "        [1.5],\n",
-       "        [1.3],\n",
-       "        [1.6],\n",
-       "        [1. ],\n",
-       "        [1.3],\n",
-       "        [1.4],\n",
-       "        [1. ],\n",
-       "        [1.5],\n",
-       "        [1. ],\n",
-       "        [1.4],\n",
-       "        [1.3],\n",
-       "        [1.4],\n",
-       "        [1.5],\n",
-       "        [1. ],\n",
-       "        [1.5],\n",
-       "        [1.1],\n",
-       "        [1.8],\n",
-       "        [1.3],\n",
-       "        [1.5],\n",
-       "        [1.2],\n",
-       "        [1.3],\n",
-       "        [1.4],\n",
-       "        [1.4],\n",
-       "        [1.7],\n",
-       "        [1.5],\n",
-       "        [1. ],\n",
-       "        [1.1],\n",
-       "        [1. ],\n",
-       "        [1.2],\n",
-       "        [1.6],\n",
-       "        [1.5],\n",
-       "        [1.6],\n",
-       "        [1.5],\n",
-       "        [1.3],\n",
-       "        [1.3],\n",
-       "        [1.3],\n",
-       "        [1.2],\n",
-       "        [1.4],\n",
-       "        [1.2],\n",
-       "        [1. ],\n",
-       "        [1.3],\n",
-       "        [1.2],\n",
-       "        [1.3],\n",
-       "        [1.3],\n",
-       "        [1.1],\n",
-       "        [1.3],\n",
-       "        [2.5],\n",
-       "        [1.9],\n",
-       "        [2.1],\n",
-       "        [1.8],\n",
-       "        [2.2],\n",
-       "        [2.1],\n",
-       "        [1.7],\n",
-       "        [1.8],\n",
-       "        [1.8],\n",
-       "        [2.5],\n",
-       "        [2. ],\n",
-       "        [1.9],\n",
-       "        [2.1],\n",
-       "        [2. ],\n",
-       "        [2.4],\n",
-       "        [2.3],\n",
-       "        [1.8],\n",
-       "        [2.2],\n",
-       "        [2.3],\n",
-       "        [1.5],\n",
-       "        [2.3],\n",
-       "        [2. ],\n",
-       "        [2. ],\n",
-       "        [1.8],\n",
-       "        [2.1],\n",
-       "        [1.8],\n",
-       "        [1.8],\n",
-       "        [1.8],\n",
-       "        [2.1],\n",
-       "        [1.6],\n",
-       "        [1.9],\n",
-       "        [2. ],\n",
-       "        [2.2],\n",
-       "        [1.5],\n",
-       "        [1.4],\n",
-       "        [2.3],\n",
-       "        [2.4],\n",
-       "        [1.8],\n",
-       "        [1.8],\n",
-       "        [2.1],\n",
-       "        [2.4],\n",
-       "        [2.3],\n",
-       "        [1.9],\n",
-       "        [2.3],\n",
-       "        [2.5],\n",
-       "        [2.3],\n",
-       "        [1.9],\n",
-       "        [2. ],\n",
-       "        [2.3],\n",
-       "        [1.8]]))"
+       "array([[1, 1],\n",
+       "       [1, 1],\n",
+       "       [1, 1],\n",
+       "       [0, 0],\n",
+       "       [0, 0],\n",
+       "       [0, 0],\n",
+       "       [0, 0],\n",
+       "       [1, 1],\n",
+       "       [0, 0],\n",
+       "       [0, 0],\n",
+       "       [0, 0],\n",
+       "       [0, 0],\n",
+       "       [1, 1],\n",
+       "       [0, 0],\n",
+       "       [1, 1],\n",
+       "       [0, 0],\n",
+       "       [1, 1],\n",
+       "       [1, 1],\n",
+       "       [0, 0],\n",
+       "       [0, 0]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,18 +63,32 @@
     "HAZI08 = reload(HAZI08)\n",
     "\n",
     "X, y = load_iris(return_X_y=True)\n",
-    "X_train, X_test, y_train, y_test = HAZI08.split_data(X, y)\n",
     "\n",
     "lin_model = HAZI08.train_linear_regression(X_train=X_train, y_train=y_train)\n",
     "log_model = HAZI08.train_logistic_regression(X_train=X_train, y_train=y_train)\n",
     "\n",
     "X, y = HAZI08.linear_train_data(load_iris_data())\n",
-    "X, y"
+    "X, y\n",
+    "\n",
+    "X, y = HAZI08.logistic_train_data(load_iris_data())\n",
+    "X, y\n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = HAZI08.split_data(X, y)\n",
+    "log_model = HAZI08.train_logistic_regression(X_train=X_train, y_train=y_train)\n",
+    "y_pred = log_model.predict(X_test)\n",
+    "\n",
+    "#fig = HAZI08.plot_actual_vs_predicted(y_test=y_test, y_pred=y_pred)\n",
+    "\n",
+    "y_pred=y_pred.reshape(-1, 1)\n",
+    "y_test=y_test.reshape(-1, 1)\n",
+    "\n",
+    "np.concatenate((y_test, y_pred), axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +97,7 @@
        "'\\nKészíts egy függvényt, betölti majd vissza adja az iris adathalmazt.\\n\\n\\nEgy példa a kimenetre: iris\\nreturn type: sklearn.utils.Bunch\\nfüggvény neve: load_iris_data\\n'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +124,7 @@
        "'\\nKészíts egy függvényt, ami a betölti az virágokhoz tartozó levél méretket egy dataframebe, majd az első 5 sort visszaadja.\\nMinden oszlop tartalmazza, hogy az milyen mérethez tartozik.\\n\\nEgy példa a bemenetre: iris\\nEgy példa a kimenetre: iris_df\\nreturn type: pandas.core.frame.DataFrame\\nfüggvény neve: check_data\\n'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +152,7 @@
        "' \\nKészíts egy függvényt ami előkészíti az adatokat egy lineaáris regressziós model feltanításához.\\nFeaturejeink legyenek a levél méretek kivéve a \"sepal length (cm)\", ez legyen a targetünk.\\n\\nEgy példa a bemenetre: iris\\nEgy példa a kimenetre: X, y\\nreturn type: (numpy.ndarray, numpy.ndarray)\\nfüggvény neve: linear_train_data\\n'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +180,7 @@
        "' \\nKészíts egy függvényt ami előkészíti az adatokat egy logisztikus regressziós model feltanításához.\\nFeaturejeink legyenek a levél méretek, targetünk pedig a 0, 1-es virág osztályok.\\nFontos csak azokkal az adatokkal tanítsunk amihez tartozik adott target. \\n\\nEgy példa a bemenetre: iris\\nEgy példa a kimenetre: X, y\\nreturn type: (numpy.ndarray, numpy.ndarray)\\nfüggvény neve: logistic_train_data\\n'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +209,7 @@
        "'\\nKészíts egy függvényt ami feldarabolja az adatainkat train és test részre. Az adatok 20%-át használjuk fel a teszteléshez.\\nTegyük determenisztikussá a darabolást, ennek értéke legyen 42.\\n\\nEgy példa a bemenetre: X, y\\nEgy példa a kimenetre: X_train, X_test, y_train, y_test\\nreturn type: (numpy.ndarray, numpy.ndarray, numpy.ndarray, numpy.ndarray)\\nfüggvény neve: split_data\\n'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +237,7 @@
        "'\\nKészíts egy függvényt ami feltanít egy lineaáris regressziós modelt, majd visszatér vele.\\n\\nEgy példa a bemenetre: X_train, y_train\\nEgy példa a kimenetre: model\\nreturn type: sklearn.linear_model._base.LinearRegression\\nfüggvény neve: train_linear_regression\\n'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +264,7 @@
        "'\\nKészíts egy függvényt ami feltanít egy logisztikus regressziós modelt, majd visszatér vele.\\n\\nEgy példa a bemenetre: X_train, y_train\\nEgy példa a kimenetre: model\\nreturn type: sklearn.linear_model._base.LogisticRegression\\nfüggvény neve: train_logistic_regression\\n'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +291,7 @@
        "' \\nKészíts egy függvényt, ami a feltanított modellel predikciót tud végre hajtani.\\n\\nEgy példa a bemenetre: model, X_test\\nEgy példa a kimenetre: y_pred\\nreturn type: numpy.ndarray\\nfüggvény neve: predict\\n'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +318,7 @@
        "\"\\nKészíts egy függvényt, ami vizualizálni tudja a label és a predikciók közötti eltérést.\\nHasználj scatter plotot a diagram elkészítéséhez.\\n\\nDiagram címe legyen: 'Actual vs Predicted Target Values'\\nAz x tengely címe legyen: 'Actual'\\nAz y tengely címe legyen: 'Predicted'\\n\\nEgy példa a bemenetre: y_test, y_pred\\nEgy példa a kimenetre: scatter plot\\nreturn type: matplotlib.figure.Figure\\nfüggvény neve: plot_actual_vs_predicted\\n\""
       ]
      },
-     "execution_count": 57,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +350,7 @@
        "' \\nKészíts egy függvényt, ami a Négyzetes hiba (MSE) értékét számolja ki a predikciók és a valós értékek között.\\n\\nEgy példa a bemenetre: y_test, y_pred\\nEgy példa a kimenetre: mse\\nreturn type: float\\nfüggvény neve: evaluate_model\\n'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
